--- a/.gitignore
+++ b/.gitignore
@@ -13,12 +13,18 @@
 /logs
 logs*
 
+# environment
+.env
+.env.*
+!.env.example
+
 # misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+package-lock.json
 
 npm-debug.log*
 yarn-debug.log*
