--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+package-lock.json
 
 # testing
 /coverage
@@ -11,6 +12,7 @@
 
 # logs
 /logs
+logs*
 
 # misc
 .DS_Store
