--- a/.env.development
+++ b/.env.development
@@ -9,15 +9,17 @@ CORS_ORIGIN=
 # Server config
 SERVER_PORT=9100
 
-#Bcrypt config
+# Bcrypt config
 SALT_ROUNDS=10
 
-# Jjwt config
-JWT_SECRET="shhhhhha3red-secret"
+# JWT config
+JWT_ACCESS_SECRET="shhhhhha3red-access-secret"
+JWT_REFRESH_SECRET="shhhhhha3red-refresh-secret"
 JWT_AUDIENCE="apitester"
 JWT_ISSUER="issuer"
 JWT_ALGORITHMS="HS256"
-JWT_EXPIRES_IN="2h"
+JWT_ACCESS_EXPIRES_IN="2h"
+JWT_REFRESH_EXPIRES_IN="7d"
 
 # db config
 MYSQL_HOST="192.168.18.129"
