--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.2",
     "node-cache": "^5.1.2",
