--- a/.env.development
+++ b/.env.development
@@ -22,9 +22,9 @@ JWT_ACCESS_EXPIRES_IN="2h"
 JWT_REFRESH_EXPIRES_IN="7d"
 
 # db config
-MYSQL_HOST="192.168.18.129"
-MYSQL_PORT="3305"
-MYSQL_USER="sa"
+MYSQL_HOST="127.0.0.1"
+MYSQL_PORT="3306"
+MYSQL_USER="root"
 MYSQL_PASSWORD="123456"
 MYSQL_DATABASE="moocdb27"
 
