--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
+    "nodemon": "^3.1.11",
     "sequelize-cli": "^6.6.2"
   }
 }
