--- a/.env.development
+++ b/.env.development
@@ -7,26 +7,26 @@
 CORS_ORIGIN=
 
 # Server config
-SERVER_PORT=9100
+SERVER_PORT=9000
 
 # Bcrypt config
 SALT_ROUNDS=10
 
 # JWT config
-JWT_ACCESS_SECRET="shhhhhha3red-access-secret"
-JWT_REFRESH_SECRET="shhhhhha3red-refresh-secret"
-JWT_AUDIENCE="apitester"
-JWT_ISSUER="issuer"
+JWT_ACCESS_SECRET="access-secret"
+JWT_REFRESH_SECRET="refresh-secret"
+JWT_AUDIENCE="mooc"
+JWT_ISSUER="mooc"
 JWT_ALGORITHMS="HS256"
 JWT_ACCESS_EXPIRES_IN="2h"
 JWT_REFRESH_EXPIRES_IN="7d"
 
 # db config
-MYSQL_HOST="192.168.18.129"
-MYSQL_PORT="3305"
+MYSQL_HOST="127.0.0.1"
+MYSQL_PORT="3306"
 MYSQL_USER="sa"
 MYSQL_PASSWORD="123456"
-MYSQL_DATABASE="moocdb27"
+MYSQL_DATABASE="moocdb"
 
 # Cache config
 USE_REDIS=false
